--- a/index.html
+++ b/index.html
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Mi Página Web Simple</title>
 </head>
 <body>
-    <h1>Hola mundo</h1>
+    <header>
+        <h1>Bienvenido a mi Página Web</h1>
+    </header>
+    <main>
+        <p>Esta es una página web simple.</p>
+    </main>
+    <footer>
+        <p>&copy; 2024 Mi Empresa</p>
+    </footer>
 </body>
 </html>
